--- a/evolucaoPaciente/WebContent/medicamento/listaMedicamento.xhtml
+++ b/evolucaoPaciente/WebContent/medicamento/listaMedicamento.xhtml
@@ -11,6 +11,15 @@
 </h:head>
 
 <h:body>
+<p:tabMenu activeIndex="5">  
+    <p:menuitem value="Evolução" url="../evolucao/formEvolucao.jsf" />  
+    <p:menuitem value="Paciente" url="../paciente/listaPaciente.jsf" icon="ui-icon-person"/>  
+    <p:menuitem value="Exame" url="../exame/listaExame.jsf" />  
+    <p:menuitem value="Cirurgia" url="../cirurgia/listaCirurgia.jsf" />  
+    <p:menuitem value="Refeição" url="../refeicao/listaRefeicao.jsf" />
+    <p:menuitem value="Medicamento" url="/medicamento/listaMedicamento.jsf" />
+    <p:menuitem value="Sair" url="../confirmarLogout.jsf" />  
+</p:tabMenu>
 <!--  CAMPO PARA PESQUISAR REGISTROS -->
 <h:panelGrid columns="8" cellpadding="3" > 
 <h:form id="formPesquisar">      
@@ -27,7 +36,7 @@
    
 	    	
    <!-- Linkando Para Outra Pagina JSF outcome="Arquivo.jsf"  --> 
-   <h:button type="button" value="Novo"  outcome="FormMedicamento" />
+   <h:button type="button" value="Novo"  outcome="formMedicamento" />
    
  </h:form>
  
@@ -35,7 +44,7 @@
 
 <!--  GRID LISTA DE EXAME -->
 
-<p:panel id="painelConsulta" header="Lista de Medicamentos Cadastrados" style="text-align:center;width:700px;" >		
+<p:panel id="painelConsulta" header="Lista de Medicamentos Cadastrados" style="text-align:center;width:auto;" >		
     		
     		<!-- DETALHES DA TABELA MOSTRAR OS VALORES -->
 				<p:dataTable value="#{medicamentoBean.listaMedicamento}"
