--- a/trunk/evolucaoPaciente/WebContent/exame/listaExame.xhtml
+++ b/trunk/evolucaoPaciente/WebContent/exame/listaExame.xhtml
@@ -11,6 +11,15 @@
 </h:head>
 
 <h:body>
+<p:tabMenu activeIndex="2">  
+    <p:menuitem value="Evolução" url="../evolucao/formEvolucao.jsf" />  
+    <p:menuitem value="Paciente" url="../paciente/listaPaciente.jsf" icon="ui-icon-person"/>  
+    <p:menuitem value="Exame" url="/exame/listaExame.jsf" />  
+    <p:menuitem value="Cirurgia" url="../cirurgia/listaCirurgia.jsf" />  
+    <p:menuitem value="Refeição" url="../refeicao/listaRefeicao.jsf" />
+    <p:menuitem value="Medicamento" url="../medicamento/listaMedicamento.jsf" />
+    <p:menuitem value="Sair" url="../confirmarLogout.jsf" />  
+</p:tabMenu>
 <!--  CAMPO PARA PESQUISAR REGISTROS -->
 <h:panelGrid columns="8" cellpadding="3" > 
 <h:form id="formPesquisar">      
@@ -28,10 +37,10 @@
    
 	<!-- EXPORTAR PDF -->
 	 
-    <h:commandButton type = "button" value="Exportar PDF" update="formPesquisar" onclick="exportarOpcao.show()"/> <!-- DIRECIONAR PRO DIALOG ABAIXO -->
+   <!--  <h:commandButton type = "button" value="Exportar PDF" update="formPesquisar" onclick="exportarOpcao.show()"/> DIRECIONAR PRO DIALOG ABAIXO -->
     	
    <!-- Linkando Para Outra Pagina JSF outcome="Arquivo.jsf"  --> 
-   <h:button type="button" value="Novo"  outcome="FormExame" />
+   <h:button type="button" value="Novo"  outcome="formExame" />
    
  </h:form>
  
@@ -55,7 +64,7 @@
 
 <!--  GRID LISTA DE EXAME -->
 
-<p:panel id="painelConsulta" header="Lista de Exame Cadastrados" style="text-align:center;width:700px;" >		
+<p:panel id="painelConsulta" header="Lista de Exame Cadastrados" style="text-align:center;width:auto;" >		
     		
     		<!-- DETALHES DA TABELA MOSTRAR OS VALORES -->
 				<p:dataTable value="#{exameBean.listaExame}"
