--- a/trunk/evolucaoPaciente/WebContent/medicamento/listaMedicamento.xhtml
+++ b/trunk/evolucaoPaciente/WebContent/medicamento/listaMedicamento.xhtml
@@ -12,7 +12,7 @@
 
 <h:body>
 <p:tabMenu activeIndex="5">  
-    <p:menuitem value="Evolução" url="../evolucao/formEvolucao.jsf" />  
+    <p:menuitem value="Evolução" url="../evolucao/listaEvolucao.jsf" />  
     <p:menuitem value="Paciente" url="../paciente/listaPaciente.jsf" icon="ui-icon-person"/>  
     <p:menuitem value="Exame" url="../exame/listaExame.jsf" />  
     <p:menuitem value="Cirurgia" url="../cirurgia/listaCirurgia.jsf" />  
