--- a/trunk/evolucaoPaciente/WebContent/paciente/formPaciente.xhtml
+++ b/trunk/evolucaoPaciente/WebContent/paciente/formPaciente.xhtml
@@ -11,7 +11,7 @@
 <title>Formulario Paciente</title>
 </h:head>
 <p:tabMenu activeIndex="1">  
-    <p:menuitem value="Evolução" url="../evolucao/formEvolucao.jsf" />  
+    <p:menuitem value="Evolução" url="../evolucao/listaEvolucao.jsf" />  
     <p:menuitem value="Paciente" url="/paciente/listaPaciente.jsf" icon="ui-icon-person"/>  
     <p:menuitem value="Exame" url="../exame/listaExame.jsf" />  
     <p:menuitem value="Cirurgia" url="../cirurgia/listaCirurgia.jsf" />  
