--- a/trunk/evolucaoPaciente/WebContent/evolucao/formEvolucaoList.xhtml
+++ b/trunk/evolucaoPaciente/WebContent/evolucao/formEvolucaoList.xhtml
@@ -32,9 +32,9 @@
 	<p:messages autoUpdate="true"/>         	
     <h:panelGrid columns="2" cellpadding="6">
         
-          <h:button type="button" value="Realizar de Exame" outcome="formEvolucaoExame" /> 
-          <h:button type="button" value="Realizar de Cirurgia" outcome="formEvolucaoCirurgia" /> 
-          <h:button type="button" value="Entregar de Refeição" outcome="formEvolucaoRefeicao" /> 
+          <h:button type="button" value="Realizar Exame" outcome="formEvolucaoExame" /> 
+          <h:button type="button" value="Realizar Cirurgia" outcome="formEvolucaoCirurgia" /> 
+          <h:button type="button" value="Entregar Refeição" outcome="formEvolucaoRefeicao" /> 
           <h:button type="button" value="Medicar" outcome="formEvolucaoMedicamento" /> 
           <h:button type="button" value="Aferir Pressão Arterial" outcome="formEvolucaoPressaoArterial" /> 
   
