--- a/trunk/evolucaoPaciente/WebContent/evolucao/listaEvolucao.xhtml
+++ b/trunk/evolucaoPaciente/WebContent/evolucao/listaEvolucao.xhtml
@@ -209,7 +209,7 @@
 	   			  
 	   			</p:dataTable>
 	   	<!--  DETALHES DO DIALOG ALTERAR -->	
- <p:dialog widgetVar="alterar" header="Alterar Evolução do Paciente" id="dialogEvolucao" modal="false">
+ <p:dialog widgetVar="alterar" header="Alterar Evolução do Paciente" id="dialogEvolucao" modal="true">
 
 	<!--  FORM DO PROPRIETARIO: ONDE EH CHAMADO NO "UPDATE" DO BOTAO DA ALTERAR DA GRID -->
 	<h:form id="formAlterar">
