--- a/evolucaoPaciente/WebContent/refeicao/formRefeicao.xhtml
+++ b/evolucaoPaciente/WebContent/refeicao/formRefeicao.xhtml
@@ -34,7 +34,7 @@
   		    
             Prato*:<p:inputText value="#{refeicaoBean.refeicao.prato}" label ="Prato" required="true" requiredMessage="Prato: Campo é obrigatório"/>
 	
-			Tipo: <p:sselectOneMenu id="tipo"	value="#{refeicaoBean.refeicao.tipo}"> 
+			Tipo: <p:selectOneMenu id="tipo"	value="#{refeicaoBean.refeicao.tipo}"> 
 							<f:selectItem itemValue="cafe" itemLabel="Cafe" />
 							<f:selectItem itemValue="almoco" itemLabel="Almoco" />
 							<f:selectItem itemValue="jantar" itemLabel="Jantar" />
