--- a/domino_web/WebContent/game.xhtml
+++ b/domino_web/WebContent/game.xhtml
@@ -46,8 +46,7 @@
 		       			 scrollHeight="400" 
 		       			 scrollable="true"
 		       			 scrollRows="15" 		       			 
-		       			 emptyMessage="Sem mensagens"
-		       			 >
+		       			 emptyMessage="Sem mensagens">
 			     	<p:column style="white-space:normal !important;">
 			            <b>
 			              <h:outputText value="#{msgChatList.login}, #{msgChatList.dateString}:" style="margin-left:10px; font-size: 14px" />
