Criando o arquivo com a lista de ips e o metodo pra escrever nesse arquivo.
Criando um novo campo "Interface de Rede"

--- a/trunk/vmManager/WebContent/createVM.xhtml
+++ b/trunk/vmManager/WebContent/createVM.xhtml
@@ -51,6 +51,8 @@
 	            <f:selectItem itemValue="6144" itemLabel="6G" />
           	</p:selectOneMenu>
           	
+          	Interface de Rede*:<p:inputText value="#{vmController.interfaceNetwork}" label ="Interface de Rede" required="true" requiredMessage="Campo Interface de Rede é obrigatório" />
+          	
           	Quantidade de Placas de Rede*:
           	<p:selectOneMenu id="qtdePlacaRede" value="#{vmController.vmEntity.numOfNetwork}" 
           		required="true" style="width: 200px;" requiredMessage="Campo Placas de Rede é obrigatório">
